--- a/Libro.tex
+++ b/Libro.tex
@@ -303,6 +303,16 @@ Quando si naviga sul web, numeri e grafici, seppur corretti potrebbero non esser
 
 Questi tre grafici che ritroviamo sul libro mostrano i risultati di test di matematica divisi tra uomini e donne. Se guardiamo il primo grafico, dove sono mostrate le medie dei test di matematica nei vari anni, vediamo che le donne conseguono un punteggio decisamente inferiore rispetto agli uomini. Osservando il secondo grafico, i dati sono gli stessi, ma cambiando la scala dell’asse Y da 450–540 a 0–600, la differenza tra i punteggi di uomini e donne appare visivamente molto più ridotta. Questi due grafici mostrano i risultati medi di ogni anno, mentre nel terzo vediamo tutti i risultati, senza medie, di un solo anno, il 2016. Notiamo come i dati sono quasi sovrapponibili, non mostrando significative differenze tra uomini e donne, suggerendo che quando siamo davanti a delle medie, potremmo cercare le distribuzioni.
 
+\needspace{4cm}
+\begin{figure}[H]
+  \centering
+  \includegraphics[width=0.95\linewidth]{images/Libro-img021.png}
+  \caption{Credits: \href{https://nsidc.org/arcticseaicenews/2020/02/}{National Snow and Ice Data Center}}
+\end{figure}
+
+Un'altra forzatura che possiamo trovare nei grafici è l'avere delle serie temporali brevi. Potremmo sostenere che negli ultimi anni i ghiacci sono aumentati del 40\%. Come possiamo vedere dal seguente grafico, l'estensione del ghiaccio ha un andamento altalenante, ma la tendenza è comunque a calare.
+Il modo più giusto di guardare questo grafico è quindi la linea blu e non l'ultimo pezzo di linea nera.
+
 \begin{mdframed}[linewidth=1pt]
 Giornali e cronaca
 
@@ -1891,7 +1901,7 @@ Alfia Distefano\endnote{\raggedright\url{https://www.vice.com/it/article/7k9a7x/
 \end{mdframed}
 
 \subsubsection{Socialità}
-Abbiamo visto come l'essere umano sia ancora molto legato ai bisogni primitivi di muoversi, stare nella natura e, stare con le altre persone. L'uomo primitivo infatti, non avendo pelliccia, artigli e zanne, avrebbe rischiato la vita senza una comunità. Se oggi ci sta molto a cuore il giudizio degli altri è anche per questo motivo, la nostra sopravvivenza è dipesa anche dall'essere riusciti a integrarci in una comunità. 
+
 Uno studio longitudinale della Harvard Study of Adult Development, durato circa 85 anni\endnote{\raggedright\url{https://www.cnbc.com/2023/02/10/85-year-harvard-study-found-the-secret-to-a-long-happy-and-successful-life.html}} ha osservato che le relazioni profonde e significative risultano tra i fattori con la più forte correlazione con longevità e felicità (chiacchere superficiali, impattano meno).
 Secondo il National Institute on Aging e il Surgeon General degli Stati Uniti, l’isolamento sociale e la solitudine sono associati a un aumento del rischio di mortalità comparabile a quello derivante dal fumare circa 15 sigarette al giorno, sebbene si tratti di correlazione e non di causalità diretta. Metanalisi suggeriscono che, in casi di isolamento sociale o solitudine cronica, la vita potrebbe accorciarsi fino a circa 15 anni, anche se si tratta di una stima massima osservata in contesti specifici\endnote{\raggedright\url{https://extension.unh.edu/blog/2022/05/prolonged-social-isolation-loneliness-are-equivalent-smoking-15-cigarettes-day}}.
  
@@ -3231,65 +3241,23 @@ Alcuni segnali\endnote{\raggedright\url{https://www.ted.com/talks/katie_hood_the
 In La prigioniera di Marcel Proust, il protagonista rinchiudere Albertine, di cui era innamorato, per gelosia e, vede l'attrazione per lei scesendere. In questo paradosso siamo gratificati e attratti dalla persona che sceglie noi, nella misura in è libera, ma in quanto libera, può decidere di non sceglierci più o non nella misura in cui vorremmo in termini di attenzioni.
 
 \clearpage\section{Società}
-Di fronte a ideologie spesso in conflitto, qual è il percorso che può portarci a una convivenza più sostenibile?
+Come possono convivere individui con idee in conflitto?
 
-Il liberalismo nasce da un’idea semplice, ma rivoluzionaria: l’essere umano è libero di scegliere come vivere, credere, pensare, lavorare, amare. Secondo questa visione, il ruolo dello Stato non è quello di indirizzare la vita dei cittadini, ma di garantire che ogni individuo possa esprimersi pienamente, senza subire coercizioni né imposizioni da parte di chi presume di sapere come gli altri dovrebbero vivere, purché ciò non limiti la libertà altrui. Questo principio, che potrebbe sembrare astratto o ideale, ha invece trovato concretezza in molte delle democrazie più stabili e avanzate del mondo.
+Il liberalismo nasce da un’idea semplice, ma rivoluzionaria: l’essere umano è libero di scegliere come vivere, credere, pensare, lavorare, amare. Secondo questa visione, il ruolo dello Stato non è quello di indirizzare la vita dei cittadini, ma di garantire che ogni individuo possa esprimersi pienamente, senza subire coercizioni né imposizioni da parte di chi presume di sapere come gli altri dovrebbero vivere, purché ciò non limiti la libertà altrui. Questo principio ha trovato concretezza in molte delle democrazie più stabili del mondo.
 
-Il liberalismo è soprattutto un’etica della convivenza. Esso valorizza il pluralismo, cioè l’idea che una società sana non sia uniforme, ma composta da una molteplicità di opinioni, fedi, culture e voci. Questa apertura non è sinonimo di relativismo o disordine, ma di fiducia nella forza dell’argomentazione pacifica, del dibattito, della tolleranza reciproca. È proprio dalla pluralità di opinioni che possono emergere nuove soluzioni, invece di affrontare nuove sfide con vecchie idee.
+Ogniuno può agire come desidera a patto di non violare a libertà degli altri.
 
-Una delle qualità principali del liberalismo è il modo in cui riesce a coniugare l'autonomia individuale con l'ordine collettivo. Non propone l’assenza di regole, né promuove un’autorità cieca: piuttosto, disegna uno spazio politico in cui le istituzioni esistono per servire i cittadini, e non per dominarli. Lo Stato liberale è uno Stato di diritto: vincolato da una costituzione, da leggi chiare e da limiti al potere all'interno dei quali è consentito il massimo grado di libertà. La libertà assoluta non sarebbe auspicabile, perché anche noi facciamo parte di quella collettività che potrebbe essere danneggiata dalla libertà illimitata degli altri. Se ognuno potesse agire senza limiti, rischieremmo di perdere più libertà a causa delle azioni altrui che non quelle che rinunciamo entrando in una società liberale. Il liberalismo è la modalità che più di tutte le altre massimizza la libertà individuale senza che vengano imposti valori morali assoluti e, cerca di garantire che persone diverse possano convivere pacificamente, pur avendo credenze, culture e stili di vita differenti.
-
-\clearpage\subsection{Ecologia}
-
-\subsubsection{Orologio dell'apocalisse}
-Doomsday Clock in inglese, è un orologio metaforico creato nel 1947 dalla rivista Bulletin of the Atomic Scientists, fondata da scienziati dell’Università di Chicago che indica la vicinanza alla fine dell'umanità,
-rappresentata dalla mezza notte. Ogni anno studiosi e ricercatori ricalcolano quanti minuti mancano alla mezza notte,
-ovvero alla fine dell'umanità tirando in avanti o indietro le lancette. Inizialmente
-quest'orologio rappresentava solo le minacce nucleari dal 2007 considera qualsiasi evento tra cui il
-riscaldamento globale. Il 1991 è stato il momento più lontano dall'apocalisse, 17 minuti,
-siccome in quell'anno venne firmato il trattato di riduzione delle armi strategiche, L'URSS venne sciolta e finì la
-guerra fredda. il 1991 è stato l'anno migliore anche grazie agli anni precedenti dove USA e URSS hanno firmato il
-Intermediate-Range Nuclear Forces Treaty, Firma del trattato INF, Cadde il muro di Berlino, Alcune nazioni dell'Europa
-dell'est diventano indipendenti dall'URSS. L'anno più vicino alla mezzanotte fino a quel momento è stato il 2020, per il continuo
-riarmo nucleare, e la mancanza di azioni da parte delle grandi potenze nel contrastare i cambiamenti climatici.
-
-\needspace{4cm}
-\begin{figure}[H]
-  \centering
-  \includegraphics[width=0.95\linewidth]{images/Libro-img018.png}
-  \caption{Di Fastfission 15:00, 14 April 2008 (UTC) - Opera
-propria, Pubblico dominio, \raggedright\url{https://commons.wikimedia.org/w/index.php?curid=1575536}}
-\end{figure}
+\subsection{Ecologia}
 
 \subsubsection{Overshoot Day}
 L'Overshoot Day è il giorno in cui l'umanità ha consumato tutte le risorse naturali (inclusa la capacità di assorbire i nostri rifiuti, come l'anidride carbonica) che la Terra è in grado di rigenerare in un intero anno.
 
-Nel 2019 l'overshoot day è stato il 29 luglio, questo vuol dire che per 5 mesi siamo stati in
-debito con la terra e abbiamo utilizzato risorse che si sono accumulate molti anni fa quando riuscivamo ad essere in
-credito col pianeta.
+Nel 2019 l'overshoot day nel mondo è stato il 29 luglio, questo vuol dire che per 5 mesi siamo stati in debito con la Terra.
+L'overshoot day dell'Europa però è stato il 10 maggio e, per l'Italia il 15 maggio.
 
-Questa data in realtà è peggio di quanto sembri, perché nel mondo ci sono paesi ad alto reddito occidentali con il loro tenore di vita e i
-paesi a basso reddito con utilizzo di risorse molto inferiori alle nostre.
+Potete calcolare il vostro personale overshoot day su footprintcalculator.org.
 
-L'overshoot day dell'Europa nel 2019 è stato il 10 maggio e, per l'Italia il
-15 maggio.
-
-Come potete vedere da questo grafico l'ultima volta che siamo riusciti a consumare meno risorse di
-quante ne siano state prodotte è stato il 1970, quando c'erano circa 3,7 miliardi di persone, da
-allora il giorno si è avvicinato sempre di
-più\endnote{\raggedright\url{https://www.overshootday.org/newsroom/press-release-july-2019-italian/} }.
-
-Sul sito ufficiale potete calcolare il vostro personale overshoot day:
-
-www.footprintcalculator.org 
-
-e vedere l'impronta ecologica di ogni stato:
-
-data.footprintnetwork.org
-
-L’estinzione di specie, umana inclusa, non rappresenta un disallineamento intenzionale della natura, bensì l’esito di dinamiche ecologiche e selettive: se un organismo non trova più risorse, tende a scomparire, finché non si ristabilisce un nuovo equilibrio tra domanda e offerta ambientale.
-
-Alcuni studi (IPCC e ricerche recenti) osservano che, se le emissioni non saranno drasticamente ridotte, entro il 2050 molte aree, soprattutto tropicali e subtropicali, potrebbero diventare difficile da abitare a causa di ondate di calore estremo, siccità o innalzamento del livello del mare\endnote{\raggedright\url{https://arxiv.org/abs/2212.04474}}. Questo ha portato alla nascita di alcuni movimenti come il no-fly, dove le persone rinunciano all'aereo come mezzo di trasporto preferendo il treno.
+Alcuni studi hanno osservato che, se le emissioni non saranno drasticamente ridotte, entro il 2050 molte aree, potrebbero diventare difficili da abitare a causa di ondate di calore estremo, siccità o innalzamento del livello del mare\endnote{\raggedright\url{https://arxiv.org/abs/2212.04474}}. Questo ha portato alla nascita di alcuni movimenti come il no-fly, dove le persone rinunciano all'aereo come mezzo di trasporto preferendo il treno.
 
 \needspace{4cm}
 \begin{figure}[H]
@@ -3315,48 +3283,9 @@ Bicicletta & 1 & 0 \\ \hline
 \end{tabular}
 \end{table}
 
-Le navi da crociera emettono ingenti quantità di CO2\endnote{\raggedright\url{https://en.wikipedia.org/wiki/Environmental\_impact\_of\_transport}} e altri inquinanti per passeggero/km, posizionandosi generalmente tra i mezzi di trasporto più impattanti, anche se in specifici scenari di altissimo carico e lunghi viaggi le emissioni pro capite possono avvicinarsi a quelle di auto o autobus.. A seguire il trasporto
-su gomma, quindi macchine, furgoni, camion, bus ecc… dove il rapporto di C02 prodotta per chilometro è più efficiente rispetto a navi e aerei, ma per via della loro numerosità e tempo di utilizzo sono i mezzi di trasporto ad
-oggi più inquinanti. Infine abbiamo il treno che si conferma, con un ampio margine, il mezzo più ecologico, anche
-rispetto alle auto elettriche per via dell'elevato numero di passeggeri che un solo mezzo può
-trasportare. 
-La scelta del treno, riducendo le macchine in circolazione permette quindi la diminuzione di CO2 di ridurre il
-traffico, aumentare la sicurezza stradale.
+Le navi da crociera emettono ingenti quantità di CO2\endnote{\raggedright\url{https://en.wikipedia.org/wiki/Environmental\_impact\_of\_transport}} e altri inquinanti per passeggero/km, posizionandosi generalmente tra i mezzi di trasporto più impattanti, anche se in specifici scenari di altissimo carico e lunghi viaggi le emissioni pro capite possono avvicinarsi a quelle di auto o autobus. A seguire il trasporto
+su strada dove il rapporto di C02 prodotta per chilometro è più efficiente rispetto a navi e aerei, ma per via della loro numerosità e tempo di utilizzo sono i mezzi ad oggi più inquinanti. Infine abbiamo il treno che si conferma, con un ampio margine, il mezzo più ecologico, anche rispetto alle auto elettriche per via dell'elevato numero di passeggeri che un solo mezzo può trasportare. 
 
-\subsubsection{Cambiamento climatico}
-Una delle critiche al cambiamento climatico, portata avanti da alcune persone, che sostengono di sentire più freddo rispetto ad anni fa. 
-Meno 33 gradi a Chicago, meno 35 gradi in Nord
-Dakota con venti freddi a meno 52 gradi. Questo dipende da diversi fattori, il primo è confondere il meteo con il clima. Il meteo fa riferimento ad un tempo e uno spazio limitato. Mentre il clima si riferisce a tempi più lunghi,
-nell'ordine di 150 anni e globalmente. Un altro motivo, che spiega questi fenomeni è il vortice polare, che possiamo vederlo come
-un anello di venti freddi che ruota attorno al Polo Nord. Con il surriscaldamento terreste, questo vortice è diventato
-irregolare, disegnando onde più ampie in alcune aree e più ristrette in altre. Nei punti più ampi verranno quindi
-coinvolte dal freddo aree dove solitamente il clima è più mite. 
-
-Negli ultimi 70 anni alcuni scienziati hanno osservato che il clima si sta raffreddando, ma il resto della comunità
-scientifica non si è ritrovata con questi dati, infatti 13 dei 14 anni più caldi si sono verificati proprio nel
-ventunesimo secolo. Considerare solo la temperatura può essere fuorviante, abbiamo altri indici come lo scioglimento
-dei ghiacci, l'innalzamento dei mari. Anche questi dati possono essere travisati. Possiamo sostenere che negli ultimi anni i ghiacci sono aumentati del 40\%. Questa non sarebbe una notizia falsa, ma decontestualizzata. Come possiamo vedere dal seguente grafico, l'estensione del ghiaccio ha un andamento altalenante, ma la tendenza è comunque a calare.
-
-\needspace{4cm}
-\begin{figure}[H]
-  \centering
-  \includegraphics[width=0.95\linewidth]{images/Libro-img021.png}
-  \caption{L'estensione mensile del ghiaccio di gennaio per il
-periodo 1979-2020 mostra un calo del 3,15 percento per decennio. Credits: \href{https://nsidc.org/arcticseaicenews/2020/02/}{National Snow and Ice Data Center}}
-\end{figure}
-
-Il modo più giusto di guardare questo grafico è quindi la linea blu e non l'ultimo pezzo di linea nera. Questo genere di lettura viene fatta su qualsiasi cosa, è un'arma molto usata in molte forme di negazionismo, fake news e complotti.
-
-Il maggiore responsabile del surriscaldamento globale è la CO2, di cui però sappiamo che gli esseri umani sono responsabili della
-produzione di sole 30 gigatonnellate rispetto alle 780 emesse dall'oceano e dal
-terreno. Il pianeta terra ha però le risorse per riassorbire queste 780 gigatonnellate a patto che ci siano sufficienti
-piante. Per questo motivo si sente spesso parlare del problema della deforestazione, oltre ad altri problemi che porta
-con se, come la riduzione di biodiversità vegetale e animale, che a cascata fa sparire altre specie utili alla nostra
-sopravvivenza. Secondo lo studio “Deforestation and world population sustainability: a quantitative
-analysis”\endnote{\raggedright\url{https://www.nature.com/articles/s41598-020-63657-6}} , pubblicato a maggio 2020 su Scientific
-Reports di Nature, il ritmo attuale della deforestazione, se mantenuto, potrebbe compromettere seriamente la capacità della Terra di sostenere l'attuale popolazione umana entro i prossimi 20-40 anni, portando a scenari critici di collasso demografico.
-
-La CO2 porta a diversi effetti a catena. L'aumento della temperatura provoca una maggiore evaporazione dell'acqua, che forma più nuvole. Il ruolo delle nuvole nel bilancio energetico è complesso: possono contribuire all'effetto serra intrappolando il calore, ma possono anche riflettere la luce solare nello spazio. Tuttavia, l'effetto serra in generale è il fenomeno per cui alcuni gas nell'atmosfera intrappolano il calore riflesso dalla Terra, impedendogli di disperdersi nello spazio e causando un ulteriore aumento della temperatura.
 
 \clearpage
 \subsubsection{Dieta}
@@ -3415,14 +3344,12 @@ pomodori &
 \end{tabular}
 \end{wraptable}
 
-Cosa centra la dieta con il cambiamento climatico? Quello della sostenibilità alimentare è un problema molto complesso che cercheremo di osservare attraverso alcuni grafici e tabelle, come quella qui a fianco. Per le principali famiglie di alimenti possiamo conoscere l'impatto idrico, di CO2, sulla deforestazione ecc… In che modo un alimento può avere un impatto ambientale? L'atto di mangiare non inquina, ma il modo in cui vengono prodotti gli alimenti potrebbe. Alcuni alimenti hanno bisogno di diversi passaggi industriali con macchinari che hanno un consumo elevato, questi cibi sono definiti processati, ma non riguarda solo questa tipologia. Come possiamo notare dalla tabella qui a fianco sull'impronta idrica, ma anche nei successivi grafici, la carne, soprattutto quella di bovino, copre le prime posizioni. Gli animali possiamo vederli come dei sistemi, di solito più sono grossi e meno sono efficienti. Per allevare gli animali serve cibo che prendiamo dai campi. Immaginate quanti chili di cibo mangia una mucca prima di essere macellata e soprattutto quanti litri d'acqua beve. La produzione di 1kg di carne di manzo comporta circa 15500 litri (94\% di ‘green water’ che non incide direttamente sui bacini idrici) e tra 300–1300 litri di acqua blu e grigia utilizzata). Ora immaginate di essere in una stanza e di avere da una parte
-la nostra mucca macellata e dall'altra parte tutto quello che la mucca ha mangiato e bevuto durante la sua vita.
-Se si dovesse scegliere tra consumare la carne della mucca o le risorse vegetali che essa ha impiegato per crescere, la logica dell'efficienza energetica suggerisce che le risorse vegetali dirette potrebbero sostenere un maggior numero di individui o per un periodo più lungo, data l'inefficienza della conversione energetica dalla biomassa vegetale a quella animale.
+Cosa centra la dieta con l'ecologia? L'atto in sé di mangiare non inquina, ma il modo in cui vengono prodotti gli alimenti potrebbe. Come possiamo osservare dalla tabella a fianco sull'impronta idrica, la carne, soprattutto quella di bovino, copre le prime posizioni. Gli animali possiamo vederli come dei sistemi, di solito più sono grossi e meno sono efficienti. Per allevare gli animali serve cibo che prendiamo dai campi. Immaginate quanti chili di cibo mangia una mucca prima di essere macellata e quanti litri d'acqua beve. La produzione di 1kg di carne di manzo necessita di circa 15500 litri. Ora immaginate di essere in una stanza e di avere da una parte una mucca macellata e, dall'altra parte tutto quello che il bovino ha mangiato e bevuto durante la sua vita.
+Se si dovesse scegliere tra consumare la carne della mucca o le risorse vegetali che essa ha impiegato per crescere, per l'efficienza energetica quest'ultime potrebbero sostenere un maggior numero di individui.
 
 Quando una mucca mangia, convertirà una piccola parte di quel cibo in carne (3-5\%) e, il resto viene trasformato in peli, corna, ossa, zoccoli, sangue, gas, calore, movimento ecc…
 
-Potremmo pensare che evitare la carne, possa impattare solo in minima parte sull'inquinamento globale, ma attualmente il 12-18\% delle emissioni di gas serra provengono da allevamenti animali\endnote{\raggedright\url{https://it.wikipedia.org/wiki/Impatto\_ambientale\_dell\%27industria\_dei\_cibi\_animali}}
-(una buona parte prodotta anche dai gas intestinali e feci), e occorrono 15.500 litri di acqua per produrre 1 kg di carne di manzo, mentre per coltivare un chilo di grano servono tra i 500 e i 4mila litri.
+Attualmente il 12-18\% delle emissioni di gas serra provengono da allevamenti animali\endnote{\raggedright\url{https://it.wikipedia.org/wiki/Impatto\_ambientale\_dell\%27industria\_dei\_cibi\_animali}}.
 
 \clearpage
 
@@ -3445,21 +3372,12 @@ Altro &
 \end{tabular}
 \end{wraptable}
 
-Bojana Bajzelj professoressa di ingegneria a Cambridge osservò che l'efficienza media di un allevamento che converte
-del foraggio vegetale in carne è meno del 3\%, e più carne mangiamo, più terre coltivabili vengono utilizzate
-per produrre risorse alimentari per gli animali che forniscono carne per gli umani. 
-Se coltivassimo un terreno con la soia produrremmo il 314\%\endnote{\raggedright\url{https://humaneherald.org/wp-content/uploads/2019/05/calories-and-protein-produced-per-acre-1.pdf}} di proteine in più rispetto alla carne di pollo e 1800\%\endnote{\raggedright\url{https://faunalytics.org/alternative-protein-production-counting-the-calories/}} in più rispetto alla carne bovina.
-Attualmente siamo 8 miliardi, ma stiamo coltivando proteine per sfamarne 10 miliardi, solo che più della metà è
-destinata agli animali negli allevamenti\endnote{Fonte: World Bank}. La produzione di carne è anche il principale
-fattore della deforestazione, sia per far pascolare il bestiame sia per creare coltivazioni per sfamarlo.
+Se le colture che producono cibo per gli allevamenti venissero coltivate a soia per gli umani produrremmo il 314\%\endnote{\raggedright\url{https://humaneherald.org/wp-content/uploads/2019/05/calories-and-protein-produced-per-acre-1.pdf}} di proteine in più rispetto alla carne di pollo e 1800\%\endnote{\raggedright\url{https://faunalytics.org/alternative-protein-production-counting-the-calories/}} in più rispetto alla carne bovina.
+La produzione di carne è anche il principale fattore della deforestazione, sia per far pascolare il bestiame sia per creare coltivazioni per sfamarlo.
 
-Di seguito un grafico che mostra le emissioni di CO2 per grammo di proteine. Vediamo Quindi come un grammo di carne
-bovina emetta molta più CO2 rispetto a grano, mais e legumi. 
+Di seguito un grafico che mostra le emissioni di CO2 per grammo di proteine. Vediamo Quindi come un grammo di carne bovina emetta molta più CO2 rispetto a grano, mais e legumi. 
 
-Fagioli, verdure (non coltivate in serra) e, alcuni pesci allevati in modo sostenibile, hanno un
-rapporto vantaggioso tra salute e costi ambientali. Sono in pari invece alimenti come latte, yogurt, uova, e le verdure
-coltivate in serra. Mentre svantaggiosi gli alimenti come carne di manzo, carni lavorate, maiale e agnello, che hanno
-mostrato elevati costi sanitari e ambientali. Una porzione da circa 200g di carne bovina equivalgono a ~4–6kg CO2-eq, corrispondenti a un’automobile media per 20km!
+Fagioli, verdure e, alcuni pesci allevati in modo sostenibile, hanno un rapporto vantaggioso tra salute e costi ambientali. Sono in pari invece alimenti come latte, yogurt, uova, e le verdure coltivate in serra. Mentre svantaggiosi gli alimenti come carne di manzo, carni lavorate, maiale e agnello, che hanno mostrato elevati costi sanitari e ambientali. Una porzione da circa 200g di carne bovina equivalgono a ~4–6kg CO2-eq, corrispondenti a un’automobile media per 20km!
 
 \needspace{4cm}
 \begin{figure}[H]
@@ -3484,24 +3402,11 @@ mostrato elevati costi sanitari e ambientali. Una porzione da circa 200g di carn
 
 Quindi è meglio diventare vegani, vegetariani o rimanere onnivori dal punto di vista ambientale?
 
-Molti hanno trattato questo fenomeno, dal
-Guardian\endnote{\raggedright\url{https://www.theguardian.com/lifeandstyle/2010/jul/18/vegetarianism-save-planet-environment} }
-all'Onu\endnote{\raggedright\url{http://www.unep.org/resourcepanel/Portals/24102/PDFs/PriorityProductsAndMaterials\_Report.pdf}
-} che da uno studio del 2010 sostiene che allontanandosi dai prodotti animali si otterrebbe un sostanziale cambiamento
-sugli effetti ambientali.
+Una ricerca\endnote{\raggedright\url{https://now.tufts.edu/news-releases/us-land-capacity-feeding-people-could-expand-dietary-changes}
+} pubblicata su Elementa, ha analizzato dieci diverse diete per stabilire quale di queste permetterebbe di sfamare più persone. La dieta peggiore è risultata quella americana ricca di carne, grassi e dolcificanti, la migliore è stata quella vegetariana e non vegana. La motivazione è che i terreni adibiti all'allevamento, se gestiti in modo non sostenibile, possono degradarsi e perdere fertilità nel tempo, rendendo difficile o impossibile la coltivazione successiva di ortaggi o piante da frutto senza interventi significativi di ripristino.
 
-In una ricerca\endnote{\raggedright\url{https://now.tufts.edu/news-releases/us-land-capacity-feeding-people-could-expand-dietary-changes}
-} pubblicata lo scorso luglio sulla rivista Elementa, un team di scienziati della Friedman School of Nutrition Science
-and Policy della Tufts University ha analizzato dieci diverse diete - dall'alimentazione americana media attuale, a una
-dieta onnivora, a una puramente vegana - e ha stabilito quale di queste permetterebbe di sfamare più persone con lo
-sfruttamento dei terreni agricoli degli Stati Uniti. La dieta peggiore è risultata quella americana ricca di carne,
-grassi e dolcificanti, circa l'80\% delle terre coltivabili è utilizzata per cibo animale, la
-migliore, a sorpresa, quella vegetariana e non vegana. La motivazione è che i terreni adibiti all'allevamento, se gestiti in modo non sostenibile, possono degradarsi e perdere fertilità nel tempo, rendendo difficile o impossibile la coltivazione successiva di ortaggi o piante da frutto senza interventi significativi di ripristino.
-
-Fortunatamente una dieta vegetariana è possibile facilmente senza squilibri alimentari se fatta nel modo corretto, a dispetto di quella vegana dove bisogna stare più attenti.
-Alcuni studi epidemiologici stimano che una parte delle morti per tumori o malattie cardiovascolari (alcune percentuali limitate) sia attribuibile all’eccessivo consumo di carne rossa. Queste analisi suggeriscono inoltre potenziali risparmi nei costi sanitari.
-Il mio intento non è quello di farvi diventare vegetariani, infatti, se riuscissimo a rimuovere o anche solo a ridurre la carne di manzo, come abbiamo visto dai precedenti grafici, riusciremmo a ridurre già moltissimo sull'ambiente, anche senza rinunciare a tutta la carne.
-Anche le nuove alternative come la carne coltivata in laboratorio o i grilli, per quanto siano promettenti, ad oggi hanno un efficienza non troppo differente da quella del pollo.
+Inoltre alcuni studi epidemiologici stimano che una parte delle morti per tumori o malattie cardiovascolari sono attribuibili all’eccessivo consumo di carne rossa, aumentando anche i costi sanitari.
+Anche nuove alternative, come la carne coltivata in laboratorio o i grilli, per quanto siano promettenti, ad oggi hanno un efficienza non troppo differente da quella del pollo.
 
 \needspace{4cm}
 \begin{wrapfigure}{i}{9cm}
@@ -3513,9 +3418,12 @@ Anche le nuove alternative come la carne coltivata in laboratorio o i grilli, pe
   \end{minipage}
 \end{wrapfigure}
 
-Un ulteriore fortuna vuole che le diete più sane, sono anche quelle che hanno un minore impatto ambientale, come possiamo notare nella piramide
-alimentare c'è molta frutta e verdura, oltre a suggerire di evitare cibi elaborati, insaccati e salumi, dichiarati cancerogeni
-dall'OMS\endnote{\raggedright\url{http://www.thelancet.com/journals/lanonc/article/PIIS1470-2045\%2815\%2900444-1/fulltext}} e ridurre la carne rossa, massimo due porzioni a settimana. Secondo uno studio dell'Università del Michigan, attraverso modelli di valutazione dell'impatto sulla salute, si è stimato che il consumo di un solo hot dog potrebbe essere associato a una perdita di circa 36 minuti di vita in salute. I calcoli hanno evidenziato che, negli USA, il consumo di ogni grammo di carne lavorata potrebbe comportare una diminuzione proporzionale di secondi di vita in salute.
+Le diete più sane, inoltre, sono anche quelle che hanno un minore impatto ambientale. Come possiamo osservare nella piramide alimentare c'è molta frutta e verdura, e limita cibi elaborati, carne rossa, insaccati e salumi, dichiarati cancerogeni dall'OMS\endnote{\raggedright\url{http://www.thelancet.com/journals/lanonc/article/PIIS1470-2045\%2815\%2900444-1/fulltext}}. Secondo uno studio dell'Università del Michigan, attraverso modelli di valutazione dell'impatto sulla salute, si è stimato che il consumo di un solo hot dog potrebbe essere associato a una perdita di circa 36 minuti di vita in salute.
+
+
+
+
+
 
 \needspace{4cm}
 Di seguito possiamo vedere quanto viene consumato un certo alimento nelle varie aree del mondo e quanto invece andrebbe
